Change build configurations

--- a/DynamicLoadApk/build.gradle
+++ b/DynamicLoadApk/build.gradle
@@ -3,12 +3,12 @@
 buildscript {
     repositories {
         jcenter()
+        google()
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://dl.bintray.com/zouyuhan/maven' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
@@ -16,7 +16,12 @@ def dlPath = '/sdcard/DynamicLoadHost'
 
 allprojects {
     repositories {
+        google()
         jcenter()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com/"}
+        maven { url 'https://maven.fabric.io/public' }
     }
     def upload = { ->
         try {
@@ -34,11 +39,15 @@ allprojects {
 
     }
 
-    task uploadDebug << {
+    task uploadDebug doLast {
         upload()
     }
 
     task buildLib (type: Jar, dependsOn:'compileReleaseJava') {
         from (project.buildDir.toString()+'/intermediates/classes/release')
+    }
+
+    task compileReleaseJava {
+        print("do nothing")
     }
 }
