--- a/DynamicLoadApk/sample/depend_on_interface/doi-plugin/build.gradle
+++ b/DynamicLoadApk/sample/depend_on_interface/doi-plugin/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 27
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
-        minSdkVersion 8
+        minSdkVersion 17
         targetSdkVersion 19
     }
 
@@ -33,9 +33,9 @@ android {
 }
 
 dependencies {
-    provided files('../../../lib/build/libs/lib.jar')
-    provided files('../doi-common/build/libs/doi-common.jar')
-    provided files('external-jars/android-support-v4.jar')
+    implementation files('../../../lib/build/libs/lib.jar')
+    implementation files('../doi-common/build/libs/doi-common.jar')
+    implementation files('external-jars/android-support-v4.jar')
 }
 
 task beforeBuild(dependsOn: [':doi-common:buildLib', ':lib:buildLib']) {
