--- a/DynamicLoadApk/sample/main/main-host/AndroidManifest.xml
+++ b/DynamicLoadApk/sample/main/main-host/AndroidManifest.xml
@@ -41,36 +41,34 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme" >
             <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="com.ryg.dynamicload.DLProxyActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="com.ryg.dynamicload.proxy.activity.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="com.ryg.dynamicload.DLProxyFragmentActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="com.ryg.dynamicload.proxy.fragmentactivity.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <service android:name="com.ryg.dynamicload.DLProxyService" >
 
-            <!--
-            <intent-filter >
-                <action android:name="com.ryg.dynamicload.proxy.service.action"/>
-            </intent-filter> 
-            -->
+        <service android:name="com.ryg.dynamicload.DLProxyService" >
+            <!--<intent-filter >-->
+                <!--<action android:name="com.ryg.dynamicload.proxy.service.action"/>-->
+            <!--</intent-filter> -->
         </service>
 
     </application>
